--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.axway.security</groupId>
 	<artifactId>apigw-pkcs11-provider</artifactId>
-	<version>0.1-SNAPSHOT</version>
+	<version>0.1</version>
 
 	<name>Axway API-GW PKCS11 provider</name>
 	<description>Makes the API-Gateway Certificate store available through an PKCS#11 provider.</description>
@@ -40,7 +38,7 @@
 		<connection>scm:git:https://github.com/Axway-API-Management-Plus/apigw-pkcs11-provider.git</connection>
 		<developerConnection>scm:git:https://github.com/Axway-API-Management-Plus/apigw-pkcs11-provider.git</developerConnection>
 		<url>https://github.com/Axway-API-Management-Plus/apigw-pkcs11-provider</url>
-		<tag>0.1</tag>
+		<tag>v0.1</tag>
 	</scm>
 
 	<repositories>
