--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.axway.security</groupId>
 	<artifactId>apigw-pkcs11-provider</artifactId>
-	<version>0.4-SNAPSHOT</version>
+	<version>0.3-SNAPSHOT</version>
 
 	<name>Axway API-GW PKCS11 provider</name>
 	<description>Makes the API-Gateway Certificate store available through an PKCS#11 provider.</description>
@@ -117,10 +117,12 @@
 					<artifactId>maven-install-plugin</artifactId>
 					<version>2.5.2</version>
 				</plugin>
-				<!--
 				<plugin>
 					<artifactId>maven-deploy-plugin</artifactId>
 					<version>2.8.2</version>
+					<configuration>
+						<skip>true</skip>
+					</configuration>
 				</plugin>
 				<plugin>
 					<artifactId>maven-site-plugin</artifactId>
@@ -129,7 +131,7 @@
 				<plugin>
 					<artifactId>maven-project-info-reports-plugin</artifactId>
 					<version>3.0.0</version>
-				</plugin>-->
+				</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
