--- a/.classpath
+++ b/.classpath
@@ -10,6 +10,8 @@
   <classpathentry kind="var" path="M2_REPO/com/vordel/common/vordel-common/7.7.0.20200730-2/vordel-common-7.7.0.20200730-2.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/axway/apigw/es/es-core/7.7.0.20200730-2/es-core-7.7.0.20200730-2.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/axway/apigw/apigw-common/7.7.0.20200730-2/apigw-common-7.7.0.20200730-2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/junit/junit/4.11/junit-4.11.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/vordel/trace/vordel-trace/7.7.0.20200730-2/vordel-trace-7.7.0.20200730-2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/commons-codec/commons-codec/1.13/commons-codec-1.13.jar"/>
+  <classpathentry kind="var" path="M2_REPO/junit/junit/4.13.1/junit-4.13.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar" sourcepath="M2_REPO/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3-sources.jar"/>
 </classpath>
