--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,16 @@
 			<version>${apigateway.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.vordel.trace</groupId>
+			<artifactId>vordel-trace</artifactId>
+			<version>${apigateway.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.13</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.13.1</version>
